contrib/kubernetes/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    name: manager
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
        - name: manager
          image: bketelsen/manager:4
          imagePullPolicy: Always
          ports:
            - name: frontend-port
              containerPort: 8000
              protocol: TCP
