contrib/kubernetes/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager
spec:
  type: ClusterIP
  selector:
    app: manager
  ports:
  - name: manager-port
    protocol: TCP
    port: 8000
    targetPort: frontend-port
