contrib/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-helloworld
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: manager.44ec396da6024f08b75a.eastus2.aksapp.io
    http:
      paths:
      - backend:
          serviceName: manager
          servicePort: manager-port
        path: /
